old files shortly, please update your links! (g0vgs)
2. docs makefile updated and commands2sgml.pl added from M0AZM.  This script
inserts the helpfiles automagically from Commands_en.hlp into the relevant
manuals. (g0vgs)
3. Commands_en.hlp adjusted slightly to ensure at least one space before
examples for the purposes of the above script. (g0vgs)
09Feb03=======================================================================
1. Correct some typos in the manuals and update perl modules etc.  Also
amend some help files to show correct syntax, around the 'clear' commands
swapping [input] and <callsign> in each case, translators please take note.
Thanks to Dave N3RD for info. (g0vgs)
2. update the addendum for latest build and include information on additional
modules required. (g0vgs)
20Jan03=======================================================================
1. changed sh/c so that, by default, it only shows the caller's country nodes
sh/c all will show the old style full list. "sh/c sk gb" will show the config
of all the GB and SK nodes.
2. changed sh/stat and sh/route for nodes
19Jan03=======================================================================
1. I have made a fundemental change to the way PC19s are dealt with as a 
result of the discussions on the mailing list. From now on, only nodes that
issue PC16s will have PC19s propagated. If they *ever* issue a PC16 then from
then on they are considered as being 'connected' and thus routable. No PC16
and you have no route. This should stop all passive links being routed. For
the few cases where you know that that is a very small node and it rarely has
users, then you can do a set/routepc19 <node> to enable PC19 propagation. In
the even more rare case of you wanting to prevent PC19s being routed thru 
your node, you can use unset/routepc19. THIS IS NOT A SUBSTITUTE FOR ROUTE
FILTERING!!!!! [translators: I have added wpc16s, wpc16u, wpc19s, wpc19u]
