@@ -63,11 +63,11 @@ Last modified: Sun Apr  1 18:21:18 BST 2001
 	<h4>Contents</h4>
 	<ol>
 	  <li> <a href="http://www.dxcluster.org/download/">Download</a> the software and any patches.
-	  <li> DXSpider <a href="installation.html">Installation</a> manual.
-	  <li> DXSpider <a href="adminmanual.html">Administration</a> manual.
-	  <li> DXSpider <a href="usermanual.html">User</a> manual.
-	  <li> Peruse the <a href="spiderFAQ.html">FAQ</a>
-	  <li> If you are on the bleeding edge, see the <a href="spiderCVS.html">CVS Addendum</a>.
+	  <li> DXSpider <a href="installation_en.html">Installation</a> manual.
+	  <li> DXSpider <a href="adminmanual_en.html">Administration</a> manual.
+	  <li> DXSpider <a href="usermanual_en.html">User</a> manual.
+	  <li> Peruse the <a href="spiderFAQ_en.html">FAQ</a>
+	  <li> If you are on the bleeding edge, see the <a href="spiderCVS_en.html">CVS Addendum</a>.
 	  <li> Explaining the <a href="client.html">client</a> programs.
 	  <li> <a href="cron.html">Periodic</a> jobs, e.g. starting connection to other clusters.
 	  <li> <a href="program.html">Programming</a> new commands or altering existing ones.
